# cairo_plugin_demo

./: Cargo.toml  README.md  cairo1-2.7.0-rc.3.vsix  settings.json
bins/compiler/: Cargo.toml
bins/compiler/src/: main.rs
bins/ls/: Cargo.toml
bins/ls/src/: main.rs
contracts/: Scarb.toml
contracts/src/: lib.cairo
crates/plugin/: Cargo.toml  Scarb.toml
crates/plugin/src/: compiler.rs  lib.rs  plugin.rs  scarb_funcs.rs  syntax_utils.rs
demo_code/: Scarb.toml
demo_code/src/: lib.cairo
scripts/: cairo_fmt.sh  clippy.sh
src/: compiler.rs  main.rs  plugin.rs  scarb_funcs.rs
