[workspace]
resolver = "2"

members = [
    "crates/plugin",
    "bins/compiler",
    "bins/ls",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.0.1"

[workspace.dependencies]
demo-plugin = { path = "./crates/plugin" }

anyhow = "1.0"
camino = { version = "1.1.2", features = [ "serde1" ] }
cairo-lang-compiler = "2.8.4"
cairo-lang-debug = "2.8.4"
cairo-lang-defs = "2.8.4"
cairo-lang-diagnostics = "2.8.4"
cairo-lang-filesystem = "2.8.4"
cairo-lang-formatter = "2.8.4"
cairo-lang-language-server = "2.8.4"
cairo-lang-lowering = "2.8.4"
cairo-lang-parser = "2.8.4"
cairo-lang-plugins = { version = "2.8.4", features = [ "testing" ] }
cairo-lang-project = "2.8.4"
cairo-lang-semantic = { version = "2.8.4", features = [ "testing" ] }
cairo-lang-sierra = "2.8.4"
cairo-lang-sierra-generator = "2.8.4"
cairo-lang-sierra-to-casm = "2.8.4"
cairo-lang-starknet = "2.8.4"
cairo-lang-starknet-classes = "2.8.4"
cairo-lang-syntax = "2.8.4"
cairo-lang-test-plugin = "2.8.4"
cairo-lang-test-runner = "2.8.4"
cairo-lang-test-utils = "2.8.4"
cairo-lang-utils = "2.8.4"
clap = { version = "4.5.4", features = [ "derive" ] }
scarb = { git = "https://github.com/software-mansion/scarb", tag = "v2.8.4" }
scarb-ui = { git = "https://github.com/software-mansion/scarb", tag = "v2.8.4" }
semver = "1.0.5"
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
smol_str = { version = "0.2.0", features = [ "serde" ] }
url = { version = "2.4.0", features = [ "serde" ] }
