[package]
name = "demo-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
camino.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-debug.workspace = true
cairo-lang-defs.workspace = true
cairo-lang-diagnostics.workspace = true
cairo-lang-filesystem.workspace = true
cairo-lang-formatter.workspace = true
cairo-lang-language-server.workspace = true
cairo-lang-lowering.workspace = true
cairo-lang-parser.workspace = true
cairo-lang-plugins.workspace = true
cairo-lang-project.workspace = true
cairo-lang-semantic.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-sierra-generator.workspace = true
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-starknet.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-lang-syntax.workspace = true
cairo-lang-test-plugin.workspace = true
cairo-lang-test-runner.workspace = true
cairo-lang-test-utils.workspace = true
cairo-lang-utils.workspace = true
scarb.workspace = true
scarb-ui.workspace = true
semver.workspace = true
serde_json.workspace = true
smol_str.workspace = true
url.workspace = true
